# ai-dispatch-demo

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml
app/: config.py  main.py
app/adapters/: __init__.py  api_client.py  db_client.py  llm_client.py
app/domain/: distance.py  guard.py  mapping.py  models.py  order_resolver.py  presentation.py  react_loop.py  replay.py  score.py
app/persistence/: __init__.py  sqlite.py
app/routes/: __init__.py  dispatch.py
app/services/: __init__.py  dispatch_service.py
app/tools/: __init__.py  gateway.py  registry.py
docs/plans/: 2026-07-03-ai-dispatch-demo-design.md  2026-07-03-ai-dispatch-demo-impl.md  2026-07-03-dispatch-replay-ui-design.md  2026-07-03-dispatch-replay-ui-impl.md
docs/sql/: candidate_masters.sql
scripts/: smoke_api.py  smoke_db.py
tests/contract/: test_api_client.py  test_db_client.py  test_llm_client.py
tests/fixtures/: candidates.json  order.api.response.json
tests/integration/: test_smoke_dispatch.py
tests/unit/: test_config.py  test_dispatch_route.py  test_guard.py  test_mapping.py  test_order_resolver.py  test_presentation.py  test_react_loop.py  test_replay.py  test_score.py  test_sqlite_persistence.py  test_tool_gateway.py
web/static/: app.js  index.html
